--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,6 +2,8 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools">
 
+    <uses-permission android:name="android.permission.INTERNET" />
+
     <application
         android:allowBackup="true"
         android:dataExtractionRules="@xml/data_extraction_rules"
@@ -13,10 +15,10 @@
         android:theme="@style/Theme.NutriTracker"
         tools:targetApi="31">
         <activity
-            android:name=".RecipeActivity"
+            android:name=".activities.RecipeActivity"
             android:exported="false" />
         <activity
-            android:name=".TrackActivity"
+            android:name=".activities.TrackActivity"
             android:exported="false" />
         <activity
             android:name=".MainActivity"
@@ -28,5 +30,4 @@
             </intent-filter>
         </activity>
     </application>
-
 </manifest>
