--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,6 +3,8 @@
     xmlns:tools="http://schemas.android.com/tools">
 
     <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.POST_NOTIFICATIONS" />
+    <uses-permission android:name="android.permission.FOREGROUND_SERVICE" />
 
     <application
         android:allowBackup="true"
@@ -14,6 +16,12 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.NutriTracker"
         tools:targetApi="31">
+
+        <service
+            android:name=".services.BackgroundService"
+            android:enabled="true"
+            android:exported="false"/>
+
         <activity
             android:name=".activities.RecipeActivity"
             android:exported="false" />
@@ -30,4 +38,5 @@
             </intent-filter>
         </activity>
     </application>
+
 </manifest>
